@@ -1,3 +1,8 @@
+2007-02-22 Paul Jakma <paul.jakma@sun.com>
+
+	* quagga.{xml,init}.in: Add licence boilerplate to ensure
+	  licence terms are clear.
+
 2006-04-03 Paul Jakma <paul.jakma@sun.com>
 
 	* quagga.xml.in: oops, ipvX-routing services don't exist yet in
